--- a/index.html
+++ b/index.html
@@ -108,54 +108,59 @@
             </div>
         </div>
     </section>
-    <section id=""></section>
+    <section class="preview">
 
-    <div class="container">
-        <div class="slider">
-            <div class="slides" style="--img: url('images/img1.jpg')">
-                <div class="content">
-                    <h2>Kesenian</h2>
-                    <p>Gandrung</p>
+        <div class="container">
+            <div class="slider">
+                <div class="slides" style="--img: url('images/img1.jpg')">
+                    <div class="content">
+                        <h2>Kesenian</h2>
+                        <p>Gandrung</p>
+                    </div>
+                </div>
+                <div class="slides" style="--img: url('images/img2.jpg')">
+                    <div class="content">
+                        <h2>Wisata</h2>
+                        <p>Kawah Ijen</p>
+                    </div>
+                </div>
+                <div class="slides" style="--img: url('images/img3.jpg')">
+                    <div class="content">
+                        <h2>Kebudayaan</h2>
+                        <p>Seblang</p>
+                    </div>
+                </div>
+                <div class="slides" style="--img: url('images/img4.jpg')">
+                    <div class="content">
+                        <h2>Karya Seni</h2>
+                        <p>Batik Gajah Oling</p>
+                    </div>
+                </div>
+                <div class="slides" style="--img: url('images/img5.jpg')">
+                    <div class="content">
+                        <h2>Kuliner</h2>
+                        <p>Kue Klemben</p>
+                    </div>
                 </div>
             </div>
-            <div class="slides" style="--img: url('images/img2.jpg')">
-                <div class="content">
-                    <h2>Wisata</h2>
-                    <p>Kawah Ijen</p>
-                </div>
-            </div>
-            <div class="slides" style="--img: url('images/img3.jpg')">
-                <div class="content">
-                    <h2>Kebudayaan</h2>
-                    <p>Seblang</p>
-                </div>
-            </div>
-            <div class="slides" style="--img: url('images/img4.jpg')">
-                <div class="content">
-                    <h2>Karya Seni</h2>
-                    <p>Batik Gajah Oling</p>
-                </div>
-            </div>
-            <div class="slides" style="--img: url('images/img5.jpg')">
-                <div class="content">
-                    <h2>Kuliner</h2>
-                    <p>Kue Klemben</p>
+            <div>
+                <div class="buttons">
+                    <span class="prev"></span>
+                    <span class="next "></span>
                 </div>
             </div>
         </div>
-        <div>
-            <div class="buttons">
-                <span class="prev"></span>
-                <span class="next "></span>
-            </div>
-        </div>
-    </div>
+    </section>
     <section id="map" class="banyuwangi-map">
+        <div style="height: 100px;"></div>
+        <div class="judul-peta">
+            <h1>PETA BANYUWANGI</h1>
+        </div>
         <?xml version="1.0" encoding="utf-8" standalone="no"?>
         <!-- Creator: Esri ArcMap 10.3.0.4322 -->
         <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
         <svg width="999.75118pt" height="999.75118pt" viewBox="0 0 999.75118 999.75118"
-            enable-background="new 0 0 999.75118 999.75118" version="1.1" xmlns="http://www.w3.org/2000/svg" <g
+            enable-background="new 0 0 999.75118 999.75118" version="1.1" xmlns="http://www.w3.org/2000/svg"
             id="Kabupaten">
             <g id="Kecamatan">
                 <path clip-path="url(#SVG_CP_1)" fill="#FEFEE9" fill-rule="evenodd" stroke="none" d="M483.30646,814.73101L483.06649,814.73101
@@ -6188,11 +6193,8 @@
     L703.36208,220.30135L703.60205,220.30135L703.84203,220.30135" />
 
             </g>
-            </g>
         </svg>
-        <div class="judul-peta">
-            <h1>PETA BANYUWANGI</h1>
-        </div>
+
         <div class="info-card" id="infoCard">
             <button id="closeCardBtn" aria-label="Close">
                 <i class="fas fa-times"></i> <!-- Ikon untuk tombol close (X) -->
@@ -6214,6 +6216,8 @@
         </div>
         </div>
 
+        <section id="kesenian">
+            <div style="height: 40px;"></div>
         <div id="card-area">
             <div class="wrapper">
                 <h1>SENI DAN BUDAYA BANYUWANGI</h1>
@@ -6266,7 +6270,7 @@
                             <p>Tumpeng Sewu adalah tradisi makan bersama dengan menggelar seribu tumpeng di pinggir
                                 jalan
                                 yang diyakini sebagai warisan adat leluhur.</p><a href="#">Selengkapnya</a>
-                        </div>                        `
+                        </div> `
                     </div>
 
                     <div class="box box-small">
@@ -6315,7 +6319,8 @@
                     </div>
 
                     <div class="box box-wide">
-                        <img alt="" src="images/kesenian/balipostcom_festival-kuwung-kisahkan-sejarah-janger_01-696x464.jpg">
+                        <img alt=""
+                            src="images/kesenian/balipostcom_festival-kuwung-kisahkan-sejarah-janger_01-696x464.jpg">
                         <div class="overlay">
                             <h3>Janger</h3>
                             <p>Janger Banyuwangi adalah kesenian rakyat tradisional yang merupakan perpaduan antara
@@ -6399,8 +6404,13 @@
                 <!-- Tambahkan lebih banyak item sesuai kebutuhan -->
             </div>
         </div>
+    </section>
+    <section id="destinasi">
 
+    
         <div class="judul-wisata">
+            <div style="height: 90px;"></div>
+
             <h1>DESTINASI WISATA BANYUWANGI</h1>
         </div>
         <section class="container">
@@ -6507,6 +6517,7 @@
                 <!-- Pagination -->
                 <div class="swiper-pagination"></div>
             </div>
+        </section>
         </section>
 
 </body>
