--- a/index.html
+++ b/index.html
@@ -6523,15 +6523,15 @@
         </section>
         </section>
         <footer class="bg-gray-800 text-white ">
-            <div class="p-10 mx-auto flex justify-between items-center">
-              <div class="flex space-x-4">
+            <div class="mx-auto max-w-screen-sm md:max-w-screen-md flex flex-col md:flex-row justify-between items-center">
+                <div class="flex flex-col md:flex-row space-y-2 md:space-y-0 md:space-x-4 p-6">
                 <a href="#beranda" class="hover:text-gray-400">Beranda</a>
                 <a href="#potensi" class="hover:text-gray-400">Potensi</a>
                 <a href="#map" class="hover:text-gray-400">Peta</a>
                 <a href="#kesenian" class="hover:text-gray-400">Budaya & kesenian</a>
                 <a href="#destinasi" class="hover:text-gray-400">Destinasi</a>
               </div>
-              <p class="text-sm">&copy; 2024 BanyuwangiJourney. All rights reserved.</p>
+              <p class="text-sm mt-2 md:mt-0">&copy; 2024 BanyuwangiJourney. All rights reserved.</p>
             </div>
           </footer>
           
